--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,27 @@
 
     </properties>
 
+<distributionManagement>
+  <repository>
+    <id>maven-releases</id>
+    <!-- CHANGE HERE by your team Nexus server -->
+    <url>http://13.126.124.159:8081/repository/maven-releases/</url>
+  </repository>
+  <snapshotRepository>
+    <id>maven-snapshots</id>
+    <!-- CHANGE HERE by your team Nexus server -->
+    <url>http://13.126.124.159:8081/repository/maven-releases/</url>
+  </snapshotRepository>
+</distributionManagement>
+
+
+<repository>
+  <id>maven-releases</id>
+  <name>maven-releases</name>
+  <url>http://13.126.124.159:8081/repository/maven-releases/</url>
+</repository>
+
+    
     <dependencyManagement>
         <dependencies>
             <dependency>
