--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>war</packaging>
     <description>A Spring Framework application based on JSP, Spring MVC, Spring Data JPA, Hibernate and JDBC</description>
     <url>https://spring-petclinic.github.io/</url>
+ 
 
     <properties>
 
@@ -80,6 +81,17 @@
         <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
         <sonar.language>java</sonar.language>
         <libsass-maven-plugin.version>0.2.26</libsass-maven-plugin.version>
+
+
+            <build>  
+        <plugins>  
+            <plugin>  
+                <groupId>org.springframework.boot</groupId>  
+                <artifactId>spring-boot-maven-plugin</artifactId>  
+                <version>4.0.1</version>  
+            </plugin>  
+        </plugins>  
+    </build>  
 
         <!-- Docker image -->
         <docker.jib-maven-plugin.version>3.3.1</docker.jib-maven-plugin.version>
