--- a/pom.xml
+++ b/pom.xml
@@ -83,14 +83,16 @@
         <libsass-maven-plugin.version>0.2.26</libsass-maven-plugin.version>
 
 
-    <build>  
-        <plugins>  
-            <plugin>  
-                <groupId>org.springframework.boot</groupId>  
-                <artifactId>spring-boot-maven-plugin</artifactId>  
-                <version>4.0.1</version>  
-            </plugin>  
-        </plugins>  
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>4.0.1</version>
+            </plugin>
+        </plugins>
     </build>  
 
         <!-- Docker image -->
