--- a/pom.xml
+++ b/pom.xml
@@ -93,8 +93,17 @@
                 <version>4.0.1</version>
             </plugin>
         </plugins>
-    </build>  
+    </build>
 
+    <!-- Other properties and tags -->
+
+    <build>
+        <defaultGoal>install</defaultGoal>
+        <finalName>petclinic</finalName>
+        <!-- ... other build configurations ... -->
+    </build>
+
+    
         <!-- Docker image -->
         <docker.jib-maven-plugin.version>3.3.1</docker.jib-maven-plugin.version>
         <docker.image.prefix>springcommunity</docker.image.prefix>
