--- a/pom.xml
+++ b/pom.xml
@@ -600,9 +600,12 @@
                         <groupId>org.springframework.boot</groupId>  
                         <artifactId>spring-boot-maven-plugin</artifactId>  
                         <version>4.0.1</version> 
-                        
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                
                         <executions>
                             <execution>
                                 <id>unpack</id>
